--- a/app/src/resources/View/SingleCoin/singleCoin.fxml
+++ b/app/src/resources/View/SingleCoin/singleCoin.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <AreaChart id="areaChart" BorderPane.alignment="CENTER">
@@ -19,6 +18,6 @@
       </AreaChart>
    </center>
    <top>
-      <ChoiceBox id="coins" prefHeight="26.0" prefWidth="352.0" BorderPane.alignment="CENTER" />
+      <ChoiceBox id="coins" fx:id="selectCoinHandler" prefHeight="26.0" prefWidth="352.0" BorderPane.alignment="CENTER" />
    </top>
 </BorderPane>
