--- a/app/src/main/resources/pages/main.fxml
+++ b/app/src/main/resources/pages/main.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Button id="buttonSingle" layoutX="212.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="177.0" text="Chose a Coin" />
-      <Button id="buttonPair" layoutX="212.0" layoutY="262.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="177.0" text="Comparison between coins" />
-   </children>
-</Pane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button id="singleCoin" layoutX="209.0" layoutY="141.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="182.0" text="Single Coin" />
+            <Button id="twoCoins" layoutX="209.0" layoutY="220.0" mnemonicParsing="false" text="Comparison between two coins" />
+         </children>
+      </Pane>
+   </center>
+</BorderPane>
