--- a/app/src/main/resources/pages/main.fxml
+++ b/app/src/main/resources/pages/main.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button id="singleCoin" layoutX="209.0" layoutY="141.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="182.0" text="Single Coin" />
-            <Button id="twoCoins" layoutX="209.0" layoutY="220.0" mnemonicParsing="false" text="Comparison between two coins" />
+            <Button id="singleCoin" fx:id="singleCoin" layoutX="209.0" layoutY="141.0" mnemonicParsing="false" onAction="#btnSingleCoin" prefHeight="25.0" prefWidth="182.0" text="Single Coin" />
+            <Button id="twoCoins" fx:id="twoCoins" layoutX="209.0" layoutY="220.0" mnemonicParsing="false" onAction="#btnTwoCoins" text="Comparison between two coins" />
          </children>
       </Pane>
    </center>
