--- a/app/src/main/resources/pages/SingleCoin/singleCoin.fxml
+++ b/app/src/main/resources/pages/SingleCoin/singleCoin.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <AreaChart id="areaChart" BorderPane.alignment="CENTER">
+      <AreaChart id="areaChart" fx:id="areaChart" BorderPane.alignment="CENTER">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -18,6 +18,6 @@
       </AreaChart>
    </center>
    <top>
-      <ComboBox fx:id="selectCoinHandler" prefHeight="24.0" prefWidth="316.0" BorderPane.alignment="CENTER" />
+      <ComboBox id="coins" fx:id="coins" prefHeight="24.0" prefWidth="316.0" BorderPane.alignment="CENTER" />
    </top>
 </BorderPane>
