--- a/app/src/main/resources/pages/SingleCoin/singleCoin.fxml
+++ b/app/src/main/resources/pages/SingleCoin/singleCoin.fxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.AreaChart?>
-<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.StackedAreaChart?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <ComboBox id="coins" fx:id="coins" prefHeight="24.0" prefWidth="316.0" BorderPane.alignment="CENTER" />
+   </top>
    <center>
-      <AreaChart id="areaChart" fx:id="areaChart" BorderPane.alignment="CENTER">
+      <StackedAreaChart id="areaChart" fx:id="areaChart" animated="false" BorderPane.alignment="CENTER">
         <xAxis>
-          <CategoryAxis side="BOTTOM" />
+          <NumberAxis side="BOTTOM" />
         </xAxis>
         <yAxis>
           <NumberAxis side="LEFT" />
         </yAxis>
-      </AreaChart>
+      </StackedAreaChart>
    </center>
-   <top>
-      <ComboBox id="coins" fx:id="coins" prefHeight="24.0" prefWidth="316.0" BorderPane.alignment="CENTER" />
-   </top>
+   <left>
+      <Button id="launch" fx:id="launch" mnemonicParsing="false" onAction="#launchHandler" text="Launch" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
