--- a/app/src/main/resources/pages/TwoCoins/twoCoins.fxml
+++ b/app/src/main/resources/pages/TwoCoins/twoCoins.fxml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.AreaChart?>
-<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.chart.StackedAreaChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <AreaChart id="areaChart" fx:id="areaChart" BorderPane.alignment="CENTER">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </AreaChart>
-   </center>
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -30,9 +20,22 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ChoiceBox id="firstCoin" fx:id="firstCoin" prefHeight="26.0" prefWidth="293.0" />
-            <ChoiceBox id="secondCoin" fx:id="secondCoin" prefHeight="26.0" prefWidth="295.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="firstCoin" prefHeight="26.0" prefWidth="294.0" />
+            <ComboBox fx:id="secondCoin" prefHeight="26.0" prefWidth="290.0" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    </top>
+   <bottom>
+      <Button fx:id="launch" mnemonicParsing="false" onAction="#launchHandler" text="Launch" BorderPane.alignment="CENTER" />
+   </bottom>
+   <center>
+      <StackedAreaChart fx:id="areaChart" BorderPane.alignment="CENTER">
+        <xAxis>
+          <NumberAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </StackedAreaChart>
+   </center>
 </BorderPane>
