Add two coins support

--- a/app/src/main/resources/pages/TwoCoins/twoCoins.fxml
+++ b/app/src/main/resources/pages/TwoCoins/twoCoins.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.AreaChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <AreaChart id="areaChart" fx:id="areaChart" BorderPane.alignment="CENTER">
+      <AreaChart id="areaChart" fx:id="areaChart" prefHeight="370.0" prefWidth="270.0" BorderPane.alignment="CENTER">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -35,4 +30,7 @@
          </children>
       </GridPane>
    </top>
+    <left>
+        <Button id="launch" fx:id="launch" mnemonicParsing="false" onAction="#launchHandler" text="Launch" BorderPane.alignment="CENTER" />
+    </left>
 </BorderPane>
