--- a/app/src/main/resources/pages/TwoCoins/twoCoins.fxml
+++ b/app/src/main/resources/pages/TwoCoins/twoCoins.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.StackedAreaChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.BorderPane?>
@@ -29,13 +30,13 @@
       <Button fx:id="launch" mnemonicParsing="false" onAction="#launchHandler" text="Launch" BorderPane.alignment="CENTER" />
    </bottom>
    <center>
-      <StackedAreaChart fx:id="areaChart" BorderPane.alignment="CENTER">
+      <LineChart fx:id="areaChart" BorderPane.alignment="CENTER">
         <xAxis>
-          <NumberAxis side="BOTTOM" />
+          <CategoryAxis side="BOTTOM" />
         </xAxis>
         <yAxis>
           <NumberAxis side="LEFT" />
         </yAxis>
-      </StackedAreaChart>
+      </LineChart>
    </center>
 </BorderPane>
